--- a/res/menu/list_menu.xml
+++ b/res/menu/list_menu.xml
@@ -18,9 +18,18 @@ limitations under the License.
     <item android:id="@+id/list_add"
         android:title="@string/list_menu_add"
         android:icon="@android:drawable/ic_menu_add" />
+    <item android:id="@+id/list_edit"
+        android:title="@string/list_menu_edit"
+        android:icon="@android:drawable/ic_menu_edit" />
+    <item android:id="@+id/list_copy_password_to_clipboard"
+        android:title="@string/list_menu_copy_password_to_clipoboard"
+        android:icon="@android:drawable/ic_menu_set_as" />
     <item android:id="@+id/list_save"
         android:title="@string/list_menu_save"
         android:icon="@android:drawable/ic_menu_save" />
+    <item android:id="@+id/list_generate_password"
+        android:title="@string/list_menu_generate_password"
+        android:icon="@android:drawable/ic_menu_edit" />
     <item android:id="@+id/list_discard"
         android:title="@string/list_menu_discard"
         android:icon="@android:drawable/ic_menu_revert" />
@@ -33,12 +42,12 @@ limitations under the License.
     <item android:id="@+id/list_backup"
         android:title="@string/list_menu_backup"
         android:icon="@android:drawable/ic_menu_save" />
-    <item android:id="@+id/list_export"
-        android:title="@string/list_menu_export"
-        android:icon="@android:drawable/ic_menu_upload" />
     <item android:id="@+id/list_restore"
         android:title="@string/list_menu_restore"
         android:icon="@android:drawable/stat_sys_download" />
+    <item android:id="@+id/list_export"
+        android:title="@string/list_menu_export"
+        android:icon="@android:drawable/ic_menu_upload" />
     <item android:id="@+id/list_import"
         android:title="@string/list_menu_import"
         android:icon="@android:drawable/stat_sys_download" />
