--- a/trunk/res/layout/login.xml
+++ b/trunk/res/layout/login.xml
@@ -42,6 +42,7 @@ limitations under the License.
     android:password="true"
     android:clickable="true"
     android:singleLine="true"
+    android:inputType="textPassword"
     android:id="@+id/login_password"
     />
 <TextView  
