Fixing bug id=14 (login not working in cupcake), 'add' button in secrets list would edit existing secret in some cases, updating project files to sdk 1.5

--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -42,6 +42,7 @@ limitations under the License.
     android:password="true"
     android:clickable="true"
     android:singleLine="true"
+    android:inputType="textPassword"
     android:id="@+id/login_password"
     />
 <TextView  
